# source_engine_2007

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSourceEngineSDK.cmake  FindWindowsSDK.cmake
engine/common/: CMakeLists.txt  netmessages.cpp  protocol.h
engine/common/Miles/: MSS.H
engine/common/vgui/: HtmlWindow.h
engine/modules/AdminServer/: CMakeLists.txt  sources.txt
engine/modules/Bugreporter/: CMakeLists.txt
engine/modules/Bugreporter_filequeue/: CMakeLists.txt  sources.txt
engine/modules/Bugreporter_public/: CMakeLists.txt  sources.txt
engine/modules/Bugreporter_text/: CMakeLists.txt
engine/modules/FileSystem_Stdio/: sources.txt  (+1 more)
engine/modules/GameUI/: CMakeLists.txt  sources.txt
engine/modules/GameUI/src/: BasePanel.cpp  OptionsSubMultiplayer.cpp
engine/modules/StudioRender/: CMakeLists.txt  sources.txt
engine/modules/StudioRender/src/: r_studiodraw.cpp
engine/modules/appframework/: CMakeLists.txt  sources.txt
engine/modules/bitmap/: CMakeLists.txt  sources.txt
engine/modules/bitmap/lib/public/: bitmap.lib
engine/modules/bitmap/src/: ImageByteSwap.cpp  resample.cpp
engine/modules/bzip2/: CMakeLists.txt  sources.txt
engine/modules/choreoobjects/: CMakeLists.txt  sources.txt
engine/modules/datacache/: CMakeLists.txt  sources.txt
engine/modules/dmxloader/: CMakeLists.txt  sources.txt
engine/modules/dmxloader/lib/public/: dmxloader.lib
engine/modules/engine/: CMakeLists.txt  sources.txt
engine/modules/engine/headers/: net_ws_headers.h
engine/modules/engine/src/: ModelInfo.cpp  Overlay.cpp  baseautocompletefilelist.cpp  baseclient.cpp  baseserver.cpp  bugreporter.cpp  buildcubemaps.cpp  cdll_engine_int.cpp  cl_bounded_cvars.cpp  cl_demo.cpp  cl_demoaction_types.cpp  cl_demoactioneditors.cpp  cl_demosmootherpanel.cpp  cl_demouipanel.cpp  cl_main.cpp  clockdriftmgr.cpp  cmodel.cpp  cmodel_disp.cpp  colorcorrectionpanel.cpp  console.cpp  debugoverlay.cpp  disp_mapload.cpp  download.cpp  dt_instrumentation_server.cpp  gl_drawlights.cpp  gl_rmisc.cpp  gl_rsurf.cpp  hltvclient.cpp  hltvclientstate.cpp  hltvserver.cpp  host.cpp  host_cmd.cpp  host_saverestore.cpp  l_studio.cpp  lightcache.cpp  matsys_interface.cpp  modelloader.cpp  net_chan.cpp  net_ws.cpp  r_decal.cpp  (+9 more)
engine/modules/engine/src/audio/private/: snd_dev_common.cpp  snd_dma.cpp  snd_dsp.cpp  snd_mix.cpp  vox.cpp
engine/modules/inputsystem/: CMakeLists.txt  sources.txt
engine/modules/jpeglib/: CMakeLists.txt  sources.txt
engine/modules/launcher/: CMakeLists.txt  sources.txt
engine/modules/launcher/src/: reslistgenerator.cpp
engine/modules/launcher_main/: CMakeLists.txt
engine/modules/launcher_main/src/: main.cpp
engine/modules/materialsystem/: CMakeLists.txt
engine/modules/materialsystem/materialsystem/: CMakeLists.txt  sources.txt
engine/modules/materialsystem/materialsystem/src/: cmatqueuedrendercontext.cpp  cmatrendercontext.cpp
engine/modules/materialsystem/shaderapi/dx10/: CMakeLists.txt  sources.txt
engine/modules/materialsystem/shaderapi/dx9/: CMakeLists.txt  sources.txt
engine/modules/materialsystem/shaderapi/empty/: CMakeLists.txt  sources.txt
engine/modules/materialsystem/shaderapi/shared/src/: shaderapidx8.cpp  vertexshaderdx8.cpp
engine/modules/materialsystem/shaderlib/: CMakeLists.txt  sources.txt
engine/modules/materialsystem/shaderlib/src/: BaseShader.cpp
engine/modules/materialsystem/src/: imagepacker.cpp  mat_stub.cpp  morph.cpp  texturemanager.cpp
engine/modules/materialsystem/stdshaders/sources/: Engine_Post_dx9.cpp  cloak_dx9_helper.cpp  colorcorrection.cpp  filmdust.cpp  filmgrain.cpp  vertexlitgeneric_dx9_helper.cpp
engine/modules/materialsystem/stdshaders/stdshader_dx8/: CMakeLists.txt  sources.txt
engine/modules/materialsystem/stdshaders/stdshader_dx9/: CMakeLists.txt  sources.txt
engine/modules/mathlib/: CMakeLists.txt  sources.txt
engine/modules/mathlib/lib/public/: mathlib.lib
engine/modules/mathlib/src/: color_conversion.cpp  mathlib_base.cpp
engine/modules/particles/: CMakeLists.txt  sources.txt
engine/modules/particles/lib/public/: particles.lib
engine/modules/particles/src/: builtin_initializers.cpp  builtin_particle_emitters.cpp  builtin_particle_ops.cpp  builtin_particle_render_ops.cpp
engine/modules/scenefilecache/: CMakeLists.txt  sources.txt
engine/modules/shaderlib/: CMakeLists.txt
engine/modules/shaderlib/lib/public/: shaderlib.lib
engine/modules/soundemittersystem/: CMakeLists.txt  sources.txt
engine/modules/tier0/: CMakeLists.txt  sources.txt
engine/modules/tier0/src/: assert_dialog.cpp  cpu_linux.cpp  minidump.cpp  platform.cpp  platform_linux.cpp  threadtools.cpp
engine/modules/tier1/: CMakeLists.txt  sources.txt
engine/modules/tier1/src/: bitbuf.cpp  newbitbuf.cpp
engine/modules/tier2/: CMakeLists.txt  sources.txt
engine/modules/tier2/lib/public/: tier2.lib
engine/modules/tier3/: CMakeLists.txt  sources.txt
engine/modules/tier3/src/: choreoutils.cpp  scenetokenprocessor.cpp
engine/modules/unicode/: CMakeLists.txt  sources.txt
engine/modules/vgui2/: CMakeLists.txt  sources.txt
engine/modules/vgui_controls/: CMakeLists.txt  sources.txt
engine/modules/vgui_controls/src/: Button.cpp  ListPanel.cpp  Panel.cpp  RichText.cpp  Slider.cpp  Splitter.cpp  TextEntry.cpp  TreeView.cpp
engine/modules/vguimatsurface/: CMakeLists.txt  sources.txt
engine/modules/vguimatsurface/src/: Input.cpp  MatSystemSurface.cpp
engine/public/: bitvec.h  bone_setup.cpp  bspfile.h  cdll_int.h  collisionutils.cpp  datamap.h  dt_recv.h  dt_send.h  sentence.cpp  studio.cpp
lib/common/: jpeglib.lib  mxtoolkitwin32.lib
lib/public/: appframework.lib  bitmap.lib  bzip2.lib  choreoobjects.lib  cl_portal.exp  cl_portal.lib  dmxloader.lib  fgdlib.lib  launcher.exp  launcher.lib  materialsystem.exp  materialsystem.lib  mathlib.lib  nvtristrip.lib  raytrace.lib  shaderlib.exp  shaderlib.lib  sv_portal.exp  sv_portal.lib  tier0.exp  tier0.lib  tier0.lib.bak  tier1.exp  tier1.lib  tier2.lib  tier3.lib  unitlib.exp  unitlib.lib  vgui_surfacelib.lib  vstdlib.exp  vstdlib.lib  vtf.lib
(+448 files in other folders)
